# queue

./: .gitignore  README.md  com.dprietob.queue.yaml  io.github.dprietob.queue.yaml  meson.build  meson_options.txt  uncrustify.cfg
.github/workflows/: flatpak.yml
data/: com.dprietob.collie.appdata.xml.in  com.dprietob.collie.desktop.in  com.dprietob.collie.gschema.xml  com.dprietob.queue.appdata.xml.in  com.dprietob.queue.desktop.in  com.dprietob.queue.gschema.xml  com.dprietob.queue.metainfo.xml.in  io.github.dprietob.queue.desktop.in  io.github.dprietob.queue.gschema.xml  io.github.dprietob.queue.metainfo.xml.in  meson.build  resources.gresource.xml
data/ui/: window.ui
po/: LINGUAS  POTFILES  de.po  el.po  es.po  fr.po  hi.po  it.po  ja.po  ko.po  meson.build  nb.po  pl.po  pt.po  queue.pot  ru.po  sv.po  zh_CN.po
src/: Config.vapi  Main.vala  Window.vala  meson.build
src/database/: Database.vala  Migration.vala
src/database/migrations/: 001_create_groups_table.vala  002_create_tasks_table.vala  003_add_completed_at_to_tasks.vala
src/modules/Backup/actions/: ImportGroupAction.vala  WipeDataAction.vala
src/modules/Backup/controllers/: BackupController.vala
src/modules/Backup/services/: BackupSerializer.vala
src/modules/Groups/actions/: CreateGroupAction.vala  DeleteGroupAction.vala  ListGroupsAction.vala  ReorderGroupsAction.vala  UpdateGroupAction.vala
src/modules/Groups/controllers/: GroupSidebarController.vala
src/modules/Groups/models/: Group.vala
src/modules/Groups/ui/: GroupRow.vala  GroupSidebar.vala  group-row.ui  group-sidebar.ui
src/modules/Groups/validators/: GroupStoreValidator.vala
src/modules/Tasks/actions/: CreateTaskAction.vala  DeleteTaskAction.vala  ListTasksByGroupAction.vala  ReorderTasksAction.vala  ToggleTaskAction.vala  UpdateTaskAction.vala
src/modules/Tasks/controllers/: TaskListController.vala
src/modules/Tasks/models/: Task.vala
src/modules/Tasks/ui/: DescriptionEditor.vala  TaskDescriptionMarkup.vala  TaskListPanel.vala  TaskRow.vala  description-editor.ui  task-list-panel.ui  task-row.ui
src/modules/Tasks/validators/: TaskStoreValidator.vala
